--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
 <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@700&display=swap" rel="stylesheet">
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+   <style>
+  .active-tip {
+    background-color: hsl(172,67%,45%) !important;
+    color: hsl(183,100%,15%) !important;
+  }
+</style>
+
 </head>
 <body class="bg-[hsl(185,41%,84%)] flex justify-center items-center min-h-screen font-mono">
     <div class="flex flex-col items-center gap-8 w-full pt-10 md:mt-0">
